[gd_scene load_steps=43 format=2]

[ext_resource path="res://atlas.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://jump_area.gd" type="Script" id=4]
[ext_resource path="res://tut/tut.tscn" type="PackedScene" id=5]
[ext_resource path="res://tut/tut_maingame.gd" type="Script" id=6]
[ext_resource path="res://mainGame.gd" type="Script" id=7]
[ext_resource path="res://blue.png" type="Texture" id=8]
[ext_resource path="res://doublejumparea.gd" type="Script" id=9]
[ext_resource path="res://jumpfail_area.gd" type="Script" id=10]
[ext_resource path="res://donejump_area.gd" type="Script" id=11]
[ext_resource path="res://music_area.gd" type="Script" id=12]
[ext_resource path="res://movingplatform.gd" type="Script" id=13]
[ext_resource path="res://mainGame.tres" type="TileSet" id=14]
[ext_resource path="res://dangerjump.gd" type="Script" id=15]
[ext_resource path="res://break_area.gd" type="Script" id=16]
[ext_resource path="res://background.jpg" type="Texture" id=17]
[ext_resource path="res://keybindmenu.tscn" type="PackedScene" id=18]
[ext_resource path="res://musicmenu.tscn" type="PackedScene" id=19]
[ext_resource path="res://turnoffmusic_area.gd" type="Script" id=20]
[ext_resource path="res://yesno.tscn" type="PackedScene" id=21]
[ext_resource path="res://spikes.gd" type="Script" id=22]
[ext_resource path="res://iloveyou.tscn" type="PackedScene" id=23]
[ext_resource path="res://cursor.tscn" type="PackedScene" id=24]
[ext_resource path="res://dragon_area.gd" type="Script" id=25]
[ext_resource path="res://bossfight.tscn" type="PackedScene" id=26]
[ext_resource path="res://bossfight.gd" type="Script" id=27]
[ext_resource path="res://health.gd" type="Script" id=28]
[ext_resource path="res://Camera.gd" type="Script" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 146.042, 87.1117 )

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 20.1789

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 295.27, 17.3406 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 55.2339, 81.9485 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 75.9153, 41.032 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 154.971, 29.9009 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 209.679, 21.9224 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 127.523, 44.2639 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 119.299, 111.274 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 86.0432, 101.052 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 317.929, 38.1089 )

[sub_resource type="CircleShape2D" id=13]
radius = 100.746

[node name="mainGame" type="Node2D"]
script = ExtResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_priority = -5
layer = -2

[node name="background" type="Sprite" parent="CanvasLayer"]
position = Vector2( 507.741, 274.618 )
z_index = -1000
z_as_relative = false
texture = ExtResource( 17 )

[node name="blue" type="Sprite" parent="."]
position = Vector2( 1008.13, 398.445 )
scale = Vector2( 0.258718, 1.05381 )
texture = ExtResource( 8 )

[node name="area" type="Area2D" parent="blue"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blue/area"]
position = Vector2( -5.79126, 0 )
shape = SubResource( 1 )

[node name="player" type="KinematicBody2D" parent="." groups=[
"player",
]]
position = Vector2( 1947.01, 488.818 )
script = ExtResource( 3 )
playing = true

[node name="Camera2D" type="Camera2D" parent="player" groups=[
"Camera",
]]
position = Vector2( 1.41418, -106.066 )
current = true
smoothing_enabled = true
smoothing_speed = 10.0
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0
script = ExtResource( 29 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="player"]
scale = Vector2( 0.36, 0.558127 )
texture = ExtResource( 2 )

[node name="djump_area" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/djump_area"]
position = Vector2( 0, 2.99658 )
shape = SubResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 14 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 655393, 1, 0, 720929, 10, 0, 786465, 10, 0, 852001, 10, 0, 917537, 10, 0, 917660, 1, 0, 917661, 1, 0, 917662, 1, 0, 917675, 1, 0, 917676, 1, 0, 917677, 1, 0, 917678, 1, 0, 917679, 1, 0, 917680, 1, 0, 917681, 1, 0, 983068, 1, 0, 983069, 1, 0, 983073, 10, 0, 983191, 1, 0, 983192, 1, 0, 983196, 10, 0, 983197, 10, 0, 983198, 10, 0, 983211, 10, 0, 983212, 10, 0, 983213, 10, 0, 983214, 10, 0, 983215, 10, 0, 983216, 10, 0, 983217, 10, 0, 983218, 10, 0, 1048591, 7, 0, 1048592, 7, 0, 1048604, 10, 0, 1048605, 10, 0, 1048609, 10, 0, 1048727, 10, 0, 1048728, 10, 0, 1048729, 1, 0, 1048730, 1, 0, 1048731, 1, 0, 1048732, 10, 0, 1048733, 10, 0, 1048734, 10, 0, 1048747, 10, 0, 1048748, 10, 0, 1048749, 10, 0, 1048750, 10, 0, 1048751, 10, 0, 1048752, 10, 0, 1048753, 10, 0, 1114113, 6, 0, 1114114, 6, 0, 1114115, 6, 0, 1114116, 6, 0, 1114117, 6, 0, 1114118, 6, 0, 1114119, 6, 0, 1114120, 6, 0, 1114121, 6, 0, 1114122, 6, 0, 1114123, 6, 0, 1114124, 6, 0, 1114125, 6, 0, 1114126, 6, 0, 1114127, 8, 0, 1114128, 8, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 10, 0, 1114141, 10, 0, 1114145, 10, 0, 1114261, 1, 0, 1114262, 1, 0, 1114263, 10, 0, 1114264, 10, 0, 1114265, 10, 0, 1114266, 10, 0, 1114267, 10, 0, 1114268, 10, 0, 1114269, 10, 0, 1114270, 10, 0, 1114283, 10, 0, 1114284, 10, 0, 1114285, 10, 0, 1114286, 10, 0, 1114287, 10, 0, 1114288, 10, 0, 1114289, 10, 0, 1179648, 8, 0, 1179649, 8, 0, 1179650, 8, 0, 1179651, 8, 0, 1179652, 8, 0, 1179653, 8, 0, 1179654, 8, 0, 1179655, 8, 0, 1179656, 8, 0, 1179657, 8, 0, 1179658, 8, 0, 1179659, 8, 0, 1179660, 8, 0, 1179661, 8, 0, 1179662, 8, 0, 1179663, 8, 0, 1179664, 9, 0, 1179665, 10, 0, 1179666, 10, 0, 1179667, 10, 0, 1179668, 10, 0, 1179669, 10, 0, 1179670, 10, 0, 1179671, 10, 0, 1179672, 10, 0, 1179673, 10, 0, 1179674, 10, 0, 1179675, 10, 0, 1179676, 10, 0, 1179677, 10, 0, 1179681, 10, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1179687, 0, 0, 1179688, 0, 0, 1179689, 0, 0, 1179690, 1, 0, 1179691, 1, 0, 1179692, 1, 0, 1179693, 1, 0, 1179694, 1, 0, 1179695, 1, 0, 1179696, 1, 0, 1179697, 1, 0, 1179698, 1, 0, 1179699, 1, 0, 1179700, 1, 0, 1179701, 1, 0, 1179702, 1, 0, 1179703, 1, 0, 1179704, 1, 0, 1179705, 1, 0, 1179706, 1, 0, 1179707, 1, 0, 1179708, 1, 0, 1179709, 1, 0, 1179710, 1, 0, 1179711, 1, 0, 1179712, 1, 0, 1179713, 1, 0, 1179714, 1, 0, 1179715, 1, 0, 1179716, 1, 0, 1179717, 1, 0, 1179718, 1, 0, 1179719, 1, 0, 1179720, 1, 0, 1179721, 1, 0, 1179722, 1, 0, 1179723, 1, 0, 1179724, 1, 0, 1179725, 1, 0, 1179726, 1, 0, 1179727, 1, 0, 1179728, 1, 0, 1179729, 1, 0, 1179730, 1, 0, 1179731, 1, 0, 1179732, 1, 0, 1179733, 1, 0, 1179734, 1, 0, 1179735, 1, 0, 1179736, 1, 0, 1179737, 1, 0, 1179738, 1, 0, 1179739, 1, 0, 1179740, 1, 0, 1179741, 1, 0, 1179742, 1, 0, 1179743, 1, 0, 1179744, 1, 0, 1179745, 1, 0, 1179746, 6, 0, 1179747, 6, 0, 1179748, 6, 0, 1179749, 6, 0, 1179750, 6, 0, 1179751, 6, 0, 1179752, 6, 0, 1179753, 6, 0, 1179754, 6, 0, 1179755, 6, 0, 1179756, 6, 0, 1179757, 6, 0, 1179758, 6, 0, 1179759, 6, 0, 1179760, 6, 0, 1179761, 6, 0, 1179762, 6, 0, 1179763, 6, 0, 1179764, 6, 0, 1179765, 6, 0, 1179766, 6, 0, 1179767, 6, 0, 1179768, 6, 0, 1179769, 6, 0, 1179770, 7, 0, 1179797, 10, 0, 1179798, 10, 0, 1179799, 10, 0, 1179800, 10, 0, 1179801, 10, 0, 1179802, 10, 0, 1179803, 10, 0, 1179804, 10, 0, 1179805, 10, 0, 1179806, 10, 0, 1179819, 10, 0, 1179820, 10, 0, 1179821, 10, 0, 1179822, 10, 0, 1179823, 10, 0, 1179824, 10, 0, 1245184, 8, 0, 1245185, 8, 0, 1245186, 8, 0, 1245187, 8, 0, 1245188, 8, 0, 1245189, 8, 0, 1245190, 8, 0, 1245191, 8, 0, 1245192, 8, 0, 1245193, 8, 0, 1245194, 8, 0, 1245195, 8, 0, 1245196, 8, 0, 1245197, 8, 0, 1245198, 8, 0, 1245199, 8, 0, 1245200, 9, 0, 1245201, 10, 0, 1245202, 10, 0, 1245203, 10, 0, 1245204, 10, 0, 1245205, 10, 0, 1245206, 10, 0, 1245207, 10, 0, 1245208, 10, 0, 1245209, 10, 0, 1245210, 10, 0, 1245211, 10, 0, 1245212, 10, 0, 1245213, 10, 0, 1245217, 10, 0, 1245218, 10, 0, 1245219, 10, 0, 1245220, 10, 0, 1245221, 10, 0, 1245222, 10, 0, 1245223, 10, 0, 1245224, 10, 0, 1245225, 10, 0, 1245226, 10, 0, 1245227, 10, 0, 1245228, 10, 0, 1245229, 10, 0, 1245230, 10, 0, 1245231, 10, 0, 1245232, 10, 0, 1245233, 10, 0, 1245234, 10, 0, 1245235, 10, 0, 1245236, 10, 0, 1245237, 10, 0, 1245238, 10, 0, 1245239, 10, 0, 1245240, 10, 0, 1245241, 10, 0, 1245242, 10, 0, 1245243, 10, 0, 1245244, 10, 0, 1245245, 10, 0, 1245246, 10, 0, 1245247, 10, 0, 1245248, 10, 0, 1245249, 10, 0, 1245250, 10, 0, 1245251, 10, 0, 1245252, 10, 0, 1245253, 10, 0, 1245254, 10, 0, 1245255, 10, 0, 1245256, 10, 0, 1245257, 10, 0, 1245258, 10, 0, 1245259, 10, 0, 1245260, 10, 0, 1245261, 10, 0, 1245262, 10, 0, 1245263, 10, 0, 1245264, 10, 0, 1245265, 10, 0, 1245266, 10, 0, 1245267, 10, 0, 1245268, 10, 0, 1245269, 10, 0, 1245270, 10, 0, 1245271, 10, 0, 1245272, 10, 0, 1245273, 10, 0, 1245274, 10, 0, 1245275, 10, 0, 1245276, 10, 0, 1245277, 10, 0, 1245278, 10, 0, 1245279, 10, 0, 1245280, 10, 0, 1245281, 10, 0, 1245282, 8, 0, 1245283, 8, 0, 1245284, 10, 0, 1245285, 10, 0, 1245286, 10, 0, 1245287, 8, 0, 1245288, 8, 0, 1245289, 8, 0, 1245290, 8, 0, 1245291, 8, 0, 1245292, 8, 0, 1245293, 8, 0, 1245294, 8, 0, 1245295, 8, 0, 1245296, 8, 0, 1245297, 8, 0, 1245298, 8, 0, 1245299, 8, 0, 1245300, 8, 0, 1245301, 8, 0, 1245302, 8, 0, 1245303, 8, 0, 1245304, 8, 0, 1245305, 8, 0, 1245306, 8, 0, 1245307, 6, 0, 1245308, 6, 0, 1245309, 6, 0, 1245310, 6, 0, 1245311, 6, 0, 1245312, 6, 0, 1245313, 6, 0, 1245314, 6, 0, 1245315, 6, 0, 1245316, 6, 0, 1245317, 6, 0, 1245318, 6, 0, 1245319, 6, 0, 1245320, 6, 0, 1245321, 6, 0, 1245322, 6, 0, 1245323, 6, 0, 1245324, 6, 0, 1245325, 6, 0, 1245326, 6, 0, 1245327, 6, 0, 1245328, 6, 0, 1245329, 1, 0, 1245330, 1, 0, 1245331, 1, 0, 1245332, 1, 0, 1245333, 10, 0, 1245334, 10, 0, 1245335, 10, 0, 1245336, 10, 0, 1245337, 10, 0, 1245338, 10, 0, 1245339, 10, 0, 1245340, 10, 0, 1245341, 10, 0, 1245342, 10, 0, 1245355, 10, 0, 1245356, 10, 0, 1245357, 10, 0, 1245358, 10, 0, 1310737, 10, 0, 1310738, 10, 0, 1310739, 10, 0, 1310740, 10, 0, 1310741, 10, 0, 1310742, 10, 0, 1310743, 10, 0, 1310744, 10, 0, 1310745, 10, 0, 1310746, 10, 0, 1310747, 10, 0, 1310748, 10, 0, 1310749, 10, 0, 1310753, 10, 0, 1310754, 10, 0, 1310755, 10, 0, 1310756, 10, 0, 1310757, 10, 0, 1310758, 10, 0, 1310759, 10, 0, 1310760, 10, 0, 1310761, 10, 0, 1310762, 10, 0, 1310763, 10, 0, 1310764, 10, 0, 1310765, 10, 0, 1310766, 10, 0, 1310767, 10, 0, 1310768, 10, 0, 1310769, 10, 0, 1310770, 10, 0, 1310771, 10, 0, 1310772, 10, 0, 1310773, 10, 0, 1310774, 10, 0, 1310775, 10, 0, 1310776, 10, 0, 1310777, 10, 0, 1310778, 10, 0, 1310779, 10, 0, 1310780, 10, 0, 1310781, 10, 0, 1310782, 10, 0, 1310783, 10, 0, 1310784, 10, 0, 1310785, 10, 0, 1310786, 10, 0, 1310787, 10, 0, 1310788, 10, 0, 1310789, 10, 0, 1310790, 10, 0, 1310791, 10, 0, 1310792, 10, 0, 1310793, 10, 0, 1310794, 10, 0, 1310795, 10, 0, 1310796, 10, 0, 1310797, 10, 0, 1310798, 10, 0, 1310799, 10, 0, 1310800, 10, 0, 1310801, 10, 0, 1310802, 10, 0, 1310803, 10, 0, 1310804, 10, 0, 1310805, 10, 0, 1310806, 10, 0, 1310807, 10, 0, 1310808, 10, 0, 1310809, 10, 0, 1310810, 10, 0, 1310811, 10, 0, 1310812, 10, 0, 1310813, 10, 0, 1310814, 10, 0, 1310815, 10, 0, 1310816, 10, 0, 1310817, 10, 0, 1310818, 8, 0, 1310819, 10, 0, 1310820, 10, 0, 1310821, 10, 0, 1310822, 10, 0, 1310823, 8, 0, 1310824, 8, 0, 1310825, 8, 0, 1310826, 8, 0, 1310827, 8, 0, 1310828, 8, 0, 1310829, 8, 0, 1310830, 8, 0, 1310831, 8, 0, 1310832, 8, 0, 1310833, 8, 0, 1310834, 8, 0, 1310835, 8, 0, 1310836, 8, 0, 1310837, 8, 0, 1310838, 8, 0, 1310839, 8, 0, 1310840, 8, 0, 1310841, 8, 0, 1310842, 8, 0, 1310843, 8, 0, 1310844, 8, 0, 1310845, 8, 0, 1310846, 8, 0, 1310847, 8, 0, 1310848, 8, 0, 1310849, 8, 0, 1310850, 8, 0, 1310851, 8, 0, 1310852, 8, 0, 1310853, 8, 0, 1310854, 8, 0, 1310855, 8, 0, 1310856, 8, 0, 1310857, 8, 0, 1310858, 8, 0, 1310859, 8, 0, 1310860, 8, 0, 1310861, 8, 0, 1310862, 8, 0, 1310863, 8, 0, 1310864, 8, 0, 1310865, 10, 0, 1310866, 10, 0, 1310867, 10, 0, 1310868, 10, 0, 1310869, 10, 0, 1310870, 10, 0, 1310871, 10, 0, 1310872, 10, 0, 1310873, 10, 0, 1310874, 10, 0, 1310875, 10, 0, 1310876, 10, 0, 1310877, 10, 0, 1310878, 10, 0, 1310891, 10, 0, 1310892, 10, 0, 1310895, 10, 0, 1376274, 10, 0, 1376275, 10, 0, 1376276, 10, 0, 1376277, 10, 0, 1376278, 10, 0, 1376279, 10, 0, 1376280, 10, 0, 1376281, 10, 0, 1376282, 10, 0, 1376283, 10, 0, 1376284, 10, 0, 1376285, 10, 0, 1376286, 10, 0, 1376287, 10, 0, 1376288, 10, 0, 1376289, 10, 0, 1376290, 10, 0, 1376291, 10, 0, 1376292, 10, 0, 1376293, 10, 0, 1376294, 10, 0, 1376295, 10, 0, 1376296, 10, 0, 1376297, 10, 0, 1376298, 10, 0, 1376299, 10, 0, 1376300, 10, 0, 1376301, 10, 0, 1376302, 10, 0, 1376303, 10, 0, 1376304, 10, 0, 1376305, 10, 0, 1376306, 10, 0, 1376307, 10, 0, 1376308, 10, 0, 1376309, 10, 0, 1376310, 10, 0, 1376311, 10, 0, 1376312, 10, 0, 1376313, 10, 0, 1376314, 10, 0, 1376315, 10, 0, 1376324, 10, 0, 1376325, 10, 0, 1376326, 10, 0, 1376327, 10, 0, 1376328, 10, 0, 1376329, 10, 0, 1376330, 10, 0, 1376331, 10, 0, 1376332, 10, 0, 1376333, 10, 0, 1376334, 10, 0, 1376335, 10, 0, 1376336, 10, 0, 1376337, 10, 0, 1376338, 10, 0, 1376339, 10, 0, 1376340, 10, 0, 1376341, 10, 0, 1376342, 10, 0, 1376351, 10, 0, 1376352, 10, 0, 1376353, 10, 0, 1376354, 8, 0, 1376355, 8, 0, 1376356, 8, 0, 1376357, 8, 0, 1376358, 8, 0, 1376359, 8, 0, 1376360, 8, 0, 1376361, 8, 0, 1376362, 8, 0, 1376363, 8, 0, 1376364, 8, 0, 1376365, 8, 0, 1376366, 8, 0, 1376367, 8, 0, 1376368, 8, 0, 1376369, 8, 0, 1376370, 8, 0, 1376371, 8, 0, 1376372, 8, 0, 1376373, 8, 0, 1376374, 10, 0, 1376375, 10, 0, 1376376, 10, 0, 1376377, 8, 0, 1376378, 8, 0, 1376379, 8, 0, 1376380, 8, 0, 1376381, 8, 0, 1376382, 8, 0, 1376383, 10, 0, 1376384, 8, 0, 1376385, 8, 0, 1376386, 8, 0, 1376387, 8, 0, 1376388, 8, 0, 1376389, 8, 0, 1376390, 8, 0, 1376391, 8, 0, 1376392, 8, 0, 1376393, 8, 0, 1376394, 8, 0, 1376395, 8, 0, 1376396, 8, 0, 1376397, 8, 0, 1376398, 8, 0, 1376399, 8, 0, 1376401, 10, 0, 1376402, 10, 0, 1376403, 10, 0, 1376404, 10, 0, 1376405, 10, 0, 1376406, 10, 0, 1376407, 10, 0, 1376408, 10, 0, 1376409, 10, 0, 1376410, 10, 0, 1376411, 10, 0, 1376412, 10, 0, 1376413, 10, 0, 1376414, 10, 0, 1376427, 10, 0, 1376428, 10, 0, 1376432, 10, 0, 1441840, 10, 0, 1441841, 10, 0, 1441842, 10, 0, 1441843, 10, 0, 1441844, 10, 0, 1441845, 10, 0, 1441846, 10, 0, 1441847, 10, 0, 1441848, 10, 0, 1441849, 10, 0, 1441850, 10, 0, 1441851, 10, 0, 1441873, 10, 0, 1441913, 10, 0, 1441914, 10, 0, 1441915, 10, 0, 1441916, 10, 0, 1441917, 8, 0, 1441918, 10, 0, 1441919, 10, 0, 1441920, 8, 0, 1441921, 8, 0, 1441922, 8, 0, 1441923, 8, 0, 1441924, 8, 0, 1441925, 8, 0, 1441926, 8, 0, 1441927, 8, 0, 1441928, 8, 0, 1441929, 8, 0, 1441930, 8, 0, 1441931, 8, 0, 1441932, 8, 0, 1441933, 8, 0, 1441934, 8, 0, 1441935, 8, 0, 1441936, 8, 0, 1441937, 8, 0, 1441944, 10, 0, 1441945, 10, 0, 1441946, 10, 0, 1441947, 10, 0, 1441948, 10, 0, 1441949, 10, 0, 1441950, 10, 0, 1441963, 10, 0, 1441964, 10, 0, 1507484, 10, 0, 1507485, 10, 0, 1507486, 10, 0, 1507499, 10, 0, 1507500, 10, 0, 1573020, 10, 0, 1573021, 10, 0, 1573022, 10, 0, 1573035, 10, 0, 1573036, 10, 0, 1638556, 10, 0, 1638557, 10, 0, 1638558, 10, 0, 1638571, 10, 0, 1638572, 10, 0, 1704092, 10, 0, 1704093, 10, 0, 1704094, 10, 0, 1704107, 10, 0, 1704108, 10, 0, 1769628, 10, 0, 1769629, 10, 0, 1769630, 10, 0, 1769643, 10, 0, 1769644, 10, 0, 1835164, 10, 0, 1835165, 10, 0, 1835166, 10, 0, 1835179, 10, 0, 1835180, 10, 0, 1900701, 10, 0, 1900702, 10, 0, 1900715, 10, 0, 1900716, 10, 0, 1966237, 10, 0, 1966238, 10, 0, 1966251, 10, 0, 1966252, 10, 0, 2031773, 10, 0, 2031774, 10, 0, 2031787, 10, 0, 2031788, 10, 0, 2097308, 10, 0, 2097309, 10, 0, 2097310, 10, 0, 2097323, 10, 0, 2097324, 10, 0, 2162844, 10, 0, 2162845, 10, 0, 2162846, 10, 0, 2162859, 10, 0, 2162860, 10, 0, 2228380, 10, 0, 2228381, 10, 0, 2228382, 10, 0, 2228395, 10, 0, 2228396, 10, 0, 2293916, 10, 0, 2293917, 10, 0, 2293918, 10, 0, 2293931, 10, 0, 2293932, 10, 0, 2359452, 10, 0, 2359453, 10, 0, 2359454, 10, 0, 2359467, 10, 0, 2359468, 8, 0, 2424988, 10, 0, 2424989, 10, 0, 2424990, 10, 0, 2425003, 10, 0, 2425004, 8, 0, 2490525, 10, 0, 2490526, 10, 0, 2490539, 10, 0, 2490540, 8, 0, 2556061, 10, 0, 2556062, 10, 0, 2556075, 10, 0, 2556076, 8, 0, 2556077, 8, 0, 2621596, 10, 0, 2621597, 10, 0, 2621598, 10, 0, 2621611, 10, 0, 2621612, 10, 0, 2621613, 8, 0, 2687132, 10, 0, 2687133, 10, 0, 2687134, 10, 0, 2687147, 10, 0, 2687148, 10, 0, 2687149, 8, 0, 2752668, 10, 0, 2752669, 10, 0, 2752670, 10, 0, 2752683, 10, 0, 2752684, 10, 0, 2752685, 8, 0, 2818204, 10, 0, 2818205, 10, 0, 2818206, 10, 0, 2818219, 10, 0, 2818220, 10, 0, 2818221, 8, 0, 2883740, 10, 0, 2883741, 10, 0, 2883742, 10, 0, 2883755, 10, 0, 2883756, 10, 0, 2883757, 8, 0, 2949276, 10, 0, 2949277, 10, 0, 2949278, 10, 0, 2949291, 10, 0, 2949292, 10, 0, 2949293, 8, 0, 3014813, 10, 0, 3014814, 10, 0, 3014827, 10, 0, 3014828, 10, 0, 3014829, 8, 0, 3080349, 10, 0, 3080350, 10, 0, 3080363, 10, 0, 3080364, 10, 0, 3080365, 8, 0, 3145884, 10, 0, 3145885, 10, 0, 3145886, 10, 0, 3145899, 10, 0, 3145900, 10, 0, 3145901, 8, 0, 3211420, 10, 0, 3211421, 10, 0, 3211422, 10, 0, 3211435, 10, 0, 3211436, 8, 0, 3211437, 8, 0, 3276956, 10, 0, 3276957, 10, 0, 3276958, 10, 0, 3276971, 10, 0, 3276972, 8, 0, 3276973, 8, 0, 3342492, 10, 0, 3342493, 10, 0, 3342494, 10, 0, 3342507, 10, 0, 3342508, 8, 0, 3342509, 8, 0, 3408028, 10, 0, 3408029, 10, 0, 3408030, 10, 0, 3408043, 10, 0, 3408044, 8, 0, 3408045, 8, 0, 3473564, 10, 0, 3473565, 10, 0, 3473566, 10, 0, 3473579, 10, 0, 3473580, 8, 0, 3473581, 8, 0, 3539101, 10, 0, 3539102, 10, 0, 3539115, 10, 0, 3539116, 8, 0, 3539117, 8, 0, 3604637, 10, 0, 3604638, 10, 0, 3604651, 10, 0, 3604652, 8, 0, 3604653, 8, 0, 3670173, 10, 0, 3670174, 10, 0, 3670187, 10, 0, 3670188, 8, 0, 3670189, 8, 0, 3735708, 10, 0, 3735709, 10, 0, 3735710, 10, 0, 3735723, 10, 0, 3735724, 8, 0, 3735725, 8, 0, 3801245, 10, 0, 3801246, 10, 0, 3801259, 10, 0, 3801260, 8, 0, 3801261, 8, 0, 3866782, 10, 0, 3866795, 10, 0, 3866796, 10, 0, 3866797, 8, 0, 3932318, 10, 0, 3932332, 10, 0, 3932333, 8, 0, 3997854, 10, 0, 3997868, 10, 0, 3997869, 8, 0, 4063390, 8, 0, 4063404, 10, 0, 4063405, 8, 0, 4128926, 8, 0, 4128940, 10, 0, 4194462, 8, 0, 4259998, 8, 0, 4325535, 6, 0, 4325536, 6, 0, 4325537, 6, 0, 4325538, 6, 0, 4325539, 6, 0, 4325540, 6, 0, 4325541, 6, 0, 4325542, 6, 0, 4325543, 6, 0, 4325544, 6, 0, 4325545, 6, 0, 4325546, 6, 0, 4325547, 6, 0, 4325548, 6, 0, 4325549, 6, 0, 4325550, 6, 0, 4325551, 6, 0, 4325552, 6, 0, 4325553, 6, 0, 4325554, 6, 0, 4325555, 6, 0, 4325556, 6, 0, 4325557, 6, 0, 4325558, 7, 0, 4325559, 7, 0, 4325560, 7, 0, 4325561, 7, 0, 4325562, 7, 0, 4325563, 7, 0, 4391099, 8, 0, 4456635, 8, 0, 4456654, 8, 0, 4456660, 8, 0, 4522171, 8, 0, 4522190, 8, 0, 4522191, 8, 0, 4522196, 8, 0, 4522197, 8, 0, 4587707, 8, 0, 4587726, 8, 0, 4587727, 8, 0, 4587732, 8, 0, 4587733, 8, 0, 4653243, 8, 0, 4653262, 8, 0, 4653263, 8, 0, 4653268, 8, 0, 4653269, 8, 0, 4718779, 8, 0, 4718780, 7, 0, 4718781, 7, 0, 4718782, 7, 0, 4718783, 7, 0, 4718784, 7, 0, 4718785, 7, 0, 4718786, 7, 0, 4718787, 7, 0, 4718788, 7, 0, 4718789, 7, 0, 4718790, 7, 0, 4718791, 7, 0, 4718792, 7, 0, 4718793, 7, 0, 4718794, 7, 0, 4718795, 7, 0, 4718796, 7, 0, 4718797, 7, 0, 4718798, 8, 0, 4718799, 8, 0, 4718800, 7, 0, 4718801, 7, 0, 4718802, 7, 0, 4718803, 7, 0, 4718804, 7, 0, 4718805, 7, 0, 4718806, 8, 0, 4718807, 8, 0, 4718808, 8, 0 )

[node name="jump_area" type="Area2D" parent="."]
position = Vector2( 277.928, 451.397 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="jump_area"]
shape = SubResource( 4 )

[node name="layer" type="CanvasLayer" parent="."]

[node name="tut" parent="layer" instance=ExtResource( 5 )]
margin_left = -1383.26
margin_top = 250.394
margin_right = -1383.26
margin_bottom = 250.394
script = ExtResource( 6 )
keybindscn = ExtResource( 18 )
mainGamePath = NodePath("../..")
spawnDoubleJumpPath = NodePath("../../doublejumparea")
player = NodePath("../../player")
bluePath = NodePath("../../blue/area")
musicscn = ExtResource( 19 )
yesno = ExtResource( 21 )
iloveyou = ExtResource( 23 )
cursor_scn = ExtResource( 24 )

[node name="timer" type="Timer" parent="layer/tut"]
one_shot = true

[node name="health" type="ProgressBar" parent="layer"]
margin_left = 97.5151
margin_top = 510.557
margin_right = 898.515
margin_bottom = 561.557
value = 2.0
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doublejumparea" type="Area2D" parent="."]
position = Vector2( 874.027, 441.733 )
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="doublejumparea"]
position = Vector2( -46.9881, 29.3029 )
shape = SubResource( 5 )

[node name="jumpfail_area" type="Area2D" parent="."]
position = Vector2( 992.258, 625.627 )
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="jumpfail_area"]
position = Vector2( 23.3082, 16.9514 )
shape = SubResource( 6 )

[node name="donejump_area" type="Area2D" parent="."]
position = Vector2( 1139.98, 544.564 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="donejump_area"]
position = Vector2( 81.4625, 20.809 )
shape = SubResource( 7 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 5263.49, 441.206 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 16, 16, 16 )
script = ExtResource( 13 )

[node name="dangerjump" type="Area2D" parent="."]
position = Vector2( 5153.21, 324.078 )
script = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dangerjump"]
position = Vector2( 124.726, 167.489 )
shape = SubResource( 8 )

[node name="music_area" type="Area2D" parent="."]
position = Vector2( 2210.31, 557.306 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="music_area"]
position = Vector2( 7.13525, -14.2705 )
shape = SubResource( 9 )

[node name="break_area" type="Area2D" parent="."]
position = Vector2( 4808.35, 476.699 )
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="break_area"]
position = Vector2( 2.24487, 0 )
shape = SubResource( 10 )

[node name="turnoffmusic_area" type="Area2D" parent="."]
position = Vector2( 3661.9, 458.295 )
script = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="turnoffmusic_area"]
position = Vector2( 4, 38 )
shape = SubResource( 11 )

[node name="spikes" type="Area2D" parent="."]
position = Vector2( 5360.6, 1959.22 )
script = ExtResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="spikes"]
position = Vector2( -9.73096, 46.6219 )
shape = SubResource( 12 )

[node name="dragon_area" type="Area2D" parent="."]
position = Vector2( 6403.59, 2378.87 )
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dragon_area"]
position = Vector2( -21.3813, -19.5999 )
shape = SubResource( 13 )

[node name="bossfight" parent="." instance=ExtResource( 26 )]
position = Vector2( 5712.08, 1686.7 )
script = ExtResource( 27 )
mainGamePath = NodePath("..")
healthPath = NodePath("../layer/health")
[connection signal="took_damage" from="player" to="layer/health" method="_on_player_took_damage"]
[connection signal="area_entered" from="player/djump_area" to="player" method="_on_djump_area_area_entered"]
[connection signal="body_entered" from="jump_area" to="jump_area" method="_on_jump_area_body_entered"]
[connection signal="first_jump" from="jump_area" to="." method="_on_jump_area_first_jump"]
[connection signal="first_jump" from="jump_area" to="layer/tut" method="_on_jump_area_first_jump"]
[connection signal="almost_dead" from="layer/health" to="layer/tut" method="_on_health_almost_dead"]
[connection signal="body_entered" from="doublejumparea" to="doublejumparea" method="_on_doublejumparea_body_entered"]
[connection signal="doublejump" from="doublejumparea" to="layer/tut" method="_on_doublejumparea_doublejump"]
[connection signal="body_entered" from="jumpfail_area" to="jumpfail_area" method="_on_jumpfail_area_body_entered"]
[connection signal="jumpfail" from="jumpfail_area" to="layer/tut" method="_on_jumpfail_area_jumpfail"]
[connection signal="body_entered" from="donejump_area" to="donejump_area" method="_on_donejump_area_body_entered"]
[connection signal="donejump" from="donejump_area" to="layer/tut" method="_on_donejump_area_donejump"]
[connection signal="body_entered" from="dangerjump" to="dangerjump" method="_on_dangerjump_body_entered"]
[connection signal="shouldsave" from="dangerjump" to="layer/tut" method="_on_dangerjump_shouldsave"]
[connection signal="body_entered" from="music_area" to="music_area" method="_on_music_area_body_entered"]
[connection signal="musicdialogue" from="music_area" to="layer/tut" method="_on_music_area_musicdialogue"]
[connection signal="body_entered" from="break_area" to="break_area" method="_on_break_area_body_entered"]
[connection signal="breakdialogue" from="break_area" to="layer/tut" method="_on_break_area_breakdialogue"]
[connection signal="body_entered" from="turnoffmusic_area" to="layer/tut" method="_on_turnoffmusic_area_body_entered"]
[connection signal="body_entered" from="spikes" to="spikes" method="_on_spikes_body_entered"]
[connection signal="body_entered" from="spikes" to="layer/tut" method="_on_spikes_body_entered"]
[connection signal="body_entered" from="dragon_area" to="bossfight" method="_on_dragon_area_body_entered"]
[connection signal="body_entered" from="dragon_area" to="dragon_area" method="_on_dragon_area_body_entered"]
